--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,7 @@
 #game-board {
   /* position: absolute; */
   display: none;
+  position: absolute;
 }
 
 #final-screen {
@@ -34,10 +35,28 @@
   color: white;
   text-transform: uppercase;
   position: absolute;
-  margin-top: 70px;
+  margin-top: 200px;
   border: none;
   width: 200px;
   height: 50px;
+}
+#reset-button{
+  display: none;
+  background-color: rgb(67, 67, 193);
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  color: white;
+  text-transform: uppercase;
+  position: absolute;
+  margin-top: 200px;
+  margin-right: 60px;
+  border: none;
+  width: 200px;
+  height: 50px;
+}
+#instructions{
+  position: absolute;
+  margin-top: 70px;
+
 }
 
 #title {
