--- a/styles/style.css
+++ b/styles/style.css
@@ -40,7 +40,7 @@
   width: 200px;
   height: 50px;
 }
-#reset-button{
+#reset-button {
   display: none;
   background-color: rgb(67, 67, 193);
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -48,10 +48,13 @@
   text-transform: uppercase;
   position: absolute;
   margin-top: 200px;
-  margin-right: 60px;
+  /* margin-right: 90px; */
   border: none;
   width: 200px;
   height: 50px;
+}
+#start-button, #reset-button:hover {
+  cursor: pointer;
 }
 #instructions{
   position: absolute;
