--- a/styles/style.css
+++ b/styles/style.css
@@ -48,7 +48,7 @@
   text-transform: uppercase;
   position: absolute;
   margin-top: 200px;
-  /* margin-right: 90px; */
+  margin-right: 90px;
   border: none;
   width: 200px;
   height: 50px;
